# Data_Engineer_Project_1

./: README.md  pyproject.toml
Documents/: week1.md
Documents/week1/: data_marts.md  datamartsdecision.md  going_to_the_source.md  howtoknow.md  staging_analogy.md  whentouse.md  whynotusealwaysstaging.md
